# fractal-curve-rs

./: .gitignore  Cargo.toml  Readme.md
src/: lib.rs  main.rs
src/curves/: dragon.rs  hilbert.rs  koch.rs  mod.rs  peano.rs  sierpinski.rs  sierpinski_arrowhead.rs  sierpinski_square.rs
src/utils/: constants.rs
tests/: main.rs
